--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@types/react-google-recaptcha": "^2.1.9",
     "@yandex/smart-captcha": "2.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
